--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,11 +1,57 @@
-<div>
-    <form>
-        <label>Email</label>
-        <input id ="email" type = "email">
-        <label>Password</label>
-        <input id ="password" type = "password">
-        <label>Name</label>
-        <input id ="name" type = "text">
-        <button id = "submit">Submit</button>
-    </form>
+<div class="row mt-5">
+    <div class="col-8 mx-auto">
+        <div class="card">
+            <h4 class="mx-auto">Register</h4>
+        </div>
+        <div class="card p-3">
+        <form>
+            <div class="form-row">
+                <div class="form-group col-6">
+                    <label for="first_name">First Name</label>
+                    <input type="text" class="form-control" id="first_name" placeholder="Email">
+                </div>
+                <div class="form-group col-6">
+                    <label for="last_name">Last Name</label>
+                    <input type="text" class="form-control" id="last_name" placeholder="Password">
+                </div>
+               
+                    <div class="form-group col-6">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Email">
+                    </div>
+                    <div class="form-group col-6">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Password">
+                    </div>
+                
+                <div class="form-group col-6">
+                    <label for="address">Address</label>
+                    <input type="text" class="form-control" id="address" placeholder="1234 Main St">
+                </div>
+                <div class="form-group col-6">
+                    <label for="address2">Address 2</label>
+                    <input type="text" class="form-control" id="address2"
+                        placeholder="Apartment, studio, or floor">
+                </div>
+                <div class="form-row mx-auto">
+                    <div class="form-group col-6">
+                        <label for="city">City</label>
+                        <input type="text" class="form-control" id="city">
+                    </div>
+                    <div class="form-group col-4">
+                        <label for="state">State</label>
+                        <select id="state" class="form-control">
+                            <option selected>Choose...</option>
+                            <option>...</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-2">
+                        <label for="zip">Zip</label>
+                        <input type="text" class="form-control" id="zip">
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Sign in</button>
+        </form>
+    </div>
+</div>
 </div>
