--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,33 @@
+<div class="row mt-5">
+    <div class="col-6 mx-auto">
+        <div class="card">
+            <h3>Log In</h3>
+        </div>
+            <div class="card p-3">
+                <form action="">
+                    <div class="form-row">
+                        <div class="form-group col-12">
+                            <label>Email</label>
+                            <input type="text" class="form-control" id="email" placeholder="Email">
+                        </div>
+                        <div class="form-group col-12">
+                            <label>Password</label>
+                            <input type="text" class="form-control" id="password" placeholder="Email">
+                        </div>
+                       
+                            
+                        
+                    </div>
+                    <button class="btn btn-primary" id="submit-login">Submit</button>
+                </form>
+            </div>
+        
+    </div>
+</div>
 <div>
     <form>
-        <label>Email</label>
-        <input id ="email" type = "email">
-        <label>Password</label>
-        <input id ="password" type = "password">
-        <button id = "submit-login">Submit</button>
+
+
+
     </form>
 </div>
