--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,27 +1,35 @@
-<div class="row mt-5">
-    <div class="col-6 mx-auto">
-        <div class="card">
-            <h3>Log In</h3>
+<div class="row m-3 m-sm-5">
+    <div class="col-sm-12 col-md-9 mx-auto">
+        <div class="card rounded-0">
+            <h3 class="mx-auto my-3">Sign In</h3>
         </div>
-            <div class="card p-3">
-                <form action="">
-                    <div class="form-row">
-                        <div class="form-group col-12">
-                            <label>Email</label>
-                            <input type="text" class="form-control" id="email" placeholder="Email">
-                        </div>
-                        <div class="form-group col-12">
-                            <label>Password</label>
-                            <input type="text" class="form-control" id="password" placeholder="Email">
-                        </div>
-                       
-                            
-                        
+        <div class="card p-3 rounded-0 border-top-0">
+            <form action="">
+                <div class="form-row">
+                    <div class="form-group col-12">
+                        <label>Email</label>
+                        <input type="text" class="form-control" id="email" placeholder="Email">
                     </div>
-                    <button class="btn btn-primary" id="submit-login">Submit</button>
-                </form>
-            </div>
-        
+                    <div class="form-group col-12">
+                        <label>Password</label>
+                        <input type="text" class="form-control" id="password" placeholder="Email">
+                    </div>
+
+
+
+                </div>
+                <div class="form-row">
+                    <button class="btn btn-primary mx-auto my-3 btn-block" id="submit-login">Sign In</button>
+                </div>
+                <div class="form-row">
+                    <p class="mx-auto">Don't have an account? </p>
+                </div>
+                <div class="form-row">
+                    <p class="mx-auto"><a href="http://localhost:3000/register">Register</a></p>
+                </div>
+            </form>
+        </div>
+
     </div>
 </div>
 <div>
