--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,11 @@
+<div class="container">
 <div class="row">
-    <div class="col-12">
+    <div class="col-10 col-offset-2">
         <div class="card">
-            
+            <h2 id="name"></h2>
+            <p id="address"><strong>Address: </strong> 123 address  </p>
+            <p id="party"><strong>Party: </strong> D/R </p>
         </div>
     </div>
+</div>
 </div>
