--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-10 col-offset-2">
         <div class="card">
-            <h2 id="name"></h2>
+            <h2 id="name">first last</h2>
             <p id="address"><strong>Address: </strong> 123 address  </p>
             <p id="party"><strong>Party: </strong> D/R </p>
         </div>
