--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -12,7 +12,7 @@
                     </div>
                     <div class="form-group col-12 col-sm-6">
                         <label for="lastName">Last Name</label>
-                        <input type="text" class="form-control" id="last_name" placeholder="Last Name">
+                        <input type="text" class="form-control" id="lastName" placeholder="Last Name">
                     </div>
 
                     <div class="form-group col-12 col-sm-12">
@@ -30,7 +30,7 @@
 
                     <div class="form-group col-12 col-sm-12">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" placeholder="1234 Main St">
+                        <input type="text" class="form-control" id="address1" placeholder="1234 Main St">
                     </div>
                     <div class="form-group col-12 col-sm-12">
                         <label for="address2">Address 2</label>
@@ -46,6 +46,7 @@
                             <select id="state" class="form-control">
                                 <option selected>Choose...</option>
                                 <option>Alabama</option>
+                                <option>California</option>
                             </select>
                         </div>
                         <div class="form-group col-12 col-sm-2">
