--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
                     </div>
                     <div class="form-group col-12">
                         <label>Password</label>
-                        <input type="text" class="form-control" id="password" placeholder="Email">
+                        <input type="password" class="form-control" id="password" placeholder="Password">
                     </div>
 
 
