--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -25,7 +25,7 @@
                     <p class="mx-auto">Don't have an account? </p>
                 </div>
                 <div class="form-row">
-                    <p class="mx-auto"><a href="http://localhost:3000/register">Register</a></p>
+                    <p class="mx-auto"><a href="/register">Register</a></p>
                 </div>
             </form>
         </div>
