--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -63,7 +63,7 @@
                     
                 </div>
                 <div class="form-row">
-                    <p class="mx-auto"><a href="http://localhost:3000/login"> Sign In Here</a></p>
+                    <p class="mx-auto"><a href="/login"> Sign In Here</a></p>
                 </div>
 
 
