added logout route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -103,7 +103,7 @@
                             </li>`;
             //define log out link
             var logOutLink = `<li class="nav-item">
-                                <a class="nav-link" href="#">Sign Out</a>
+                                <a class="nav-link" href="/logout">Sign Out</a>
                             </li>`;
             //set valid userId
             var userId = loggedIn();
