--- a/views/datapage.handlebars
+++ b/views/datapage.handlebars
@@ -1,6 +1,8 @@
-<div>
-    wow great.
-    <div id = "user-info">
-        
+<div class="background-image">
+    <div>
+        wow great.
+        <div id="user-info">
+
+        </div>
     </div>
 </div>
